--- a/Projet_INF8702/Projet_INF8702.csproj
+++ b/Projet_INF8702/Projet_INF8702.csproj
@@ -87,9 +87,17 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Quad.cs" />
+    <Compile Include="RenderStatesManager.cs" />
     <Compile Include="Scene.cs" />
+    <Compile Include="ShadowMap.cs" />
     <Compile Include="SkyBox.cs" />
     <Compile Include="SphereRenderer.cs" />
+    <Compile Include="Toolbox.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Toolbox.Designer.cs">
+      <DependentUpon>Toolbox.cs</DependentUpon>
+    </Compile>
     <Compile Include="Vertex.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -104,6 +112,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Toolbox.resx">
+      <DependentUpon>Toolbox.cs</DependentUpon>
+    </EmbeddedResource>
     <MeshContentTask Include="Batman.fbx" />
     <MeshContentTask Include="Projet.fbx" />
     <None Include="Models\robot.obj">
@@ -139,6 +150,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Shaders\PhongSkybox.hlsl">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Shaders\VSDepth.hlsl">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Shaders\VS.hlsl">
